# TTRL

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json
backend/: .env.ps  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.lambda  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-cicd.txt  requirements-dev.txt  requirements.txt
backend/app/: main.py  settings.py
backend/app/api/routes/: cities.py  claimed_distance.py  routes.py  screw_cards.py  sites.py  teams.py  user_locations.py
backend/app/api/schemas/: __init__.py  base.py  cities.py  claimed_distance.py  generic.py  routes.py  screw_cards.py  sites.py  teams.py  user_locations.py
backend/app/db/: base_class.py  session.py
backend/app/models/: __init__.py  base.py  cities.py  routes.py  screw_cards.py  sites.py  teams.py  user_locations.py  utils.py
backend/app/utils/: __init__.py  decode_verify_jwt.py
backend/init_db/: db_admin.yaml  init_db.py  load_map.py  map_utils.py  test_db.py
backend/location_lambda/: .gitignore  location_lambda.py  requirements.txt
backend/tests/: test_global.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  MaddysNotes.md  theme.txt
remote-state/: main.tf
terraform/: apigw.tf  backend.tf  backend_lambda.tf  cognito.tf  ec2.tf  ecr.tf  iam.tf  lambda.tf  location_lambda.tf  main.tf  rds.tf  static_website.tf  variables.tf  vpc.tf
terraform/templates/: cognito_email.txt  cognito_sms.txt  lambda_policy.json  location_lambda_policy.json
(+48 files in other folders)
